Implement Student findById with object ExampleId
