# src/main/java/com/api/school/student/domain/ports/StudentRepositoryPort.java
@@ -1,5 +1,6 @@
 package com.api.school.student.domain.ports;
 
+import com.openapi.generate.model.ResponseExampleDto;
 import com.openapi.generate.model.ResponseStudentDto;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
@@ -13,4 +14,5 @@ import reactor.core.publisher.Mono;
 public interface StudentRepositoryPort {
     Flux<ResponseStudentDto> getAllStudents();
     Mono<ResponseStudentDto> getStudentById(Integer id);
+    Mono<ResponseExampleDto> getStudentObjectById(Integer id);
 }
